# SoRo4

./: .gitignore  README.md  arm2.ino
Arduino/: README.md  master_arm.ino
Arduino/arm_controller/: ArmPID.ino  Arm_UDP_and_PID.ino  Elbow-non-pid.ino  PID.cpp  PID.h  Slave_Arm_UDP_and_PID.ino  arm_controller.ino  turnMeDaddy.ino
Arduino/drill_controller/: drill_controller.ino
Arduino/lidar/: lidar.ino
Arduino/lidarHandler/: lidarHandler.ino
Arduino/masterArmReader/: masterArmReader.ino
Arduino/master_arm/: master_arm.ino
Arduino/master_arm_uno/: master_arm_uno.ino
Arduino/motorTesting/: motorTesting.ino
Arduino/sciencePackage/: sciencePackage.ino  sciencePackage.pro  sciencepackage.h
Arduino/slave_arm/: slave_arm.ino
Arduino/slave_arm_uno/: slave_arm_uno.ino
ArmController/: ArmController.pro  comms.cpp  gamepadmonitor.cpp  gamepadmonitor.h  main.cpp
Rover/: Rover.pro
Rover/autonomous/: GPSCoord.cpp  (+7 more)
Rover_MissionControl/: Rover_MissionControl.pro
Soro4/: Makefile  Soro4.pro  Soro4.pro.user.f7be06d
Soro4/autonomous/ballFinder/: BallFinder.cpp  BallFinder.h  CMakeLists.txt  Tests.cpp  main.cpp
build-Rover-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile
build-Rover_MissionControl-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile
build-Soro4-Desktop_Qt_5_11_1_GCC_64bit-Debug/: Makefile
doc/: README.md  Rover Lidar System.docx  communication docs.docx
libs/: libautonomous.so.1.0.0  libcore.so.1.0.0  libdriveController.so.1  libdriveController.so.1.0.0  libdriveSystem.so.1.0  libdriveSystem.so.1.0.0  libmasterArm.so.1.0.0  libslaveArm.so.1.0.0
(+212 files in other folders)
